--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,12 @@ jdbc.url=jdbc:mysql://127.0.0.1:3306/coffee?useUnicode=true&characterEncoding=ut
 jdbc.username=root
 jdbc.password=12345678
 
+#hibernate settings
+hibernate.show_sql=true
+hibernate.format_sql=true
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+
 #druid
 druid.initialSize = 10
 druid.maxActive = 200
