--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/coffee?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=12345678
+jdbc.password=123456
 
 #hibernate settings
 hibernate.show_sql=true
